写了一般的motion,同时修复了全局变量的bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.0.2)
 project(replan_fsm)
 
 ## Compil as C++11, supported in ROS Kinetic and newer
-# add_compile_options(-std=c++11)
+add_compile_options(-std=c++17+)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -214,7 +214,7 @@ include_directories(
 # catkin_add_nosetests(test)
 
 
-add_executable(regenerate_target_node src/regenerate_target_node.cpp)
+add_executable(regenerate_target_node src/regenerate_target_node.cpp src/CAN.cpp)
 
 
 target_link_libraries(regenerate_target_node
